generation of the app core
