# app/controllers/report_types_controller.rb
@@ -1,0 +1,18 @@
+=begin
+METRICS API
+
+The SASHIMI API represents a RESTful implementation of SUSHI automation intended to returns COUNTER Research Data Release 1 reports 
+
+OpenAPI spec version: 1.0.0
+Contact: support@datacite.org
+Generated by: https://github.com/swagger-api/swagger-codegen.git
+
+=end
+class ReportTypesController < ApplicationController
+
+  def index
+    # Your code here
+
+    render json: {"message" => "yes, it worked"}
+  end
+end
