# app/models/report.rb
@@ -1,0 +1,21 @@
+=begin
+METRICS API
+
+The SASHIMI API represents a RESTful implementation of SUSHI automation intended to returns COUNTER Research Data Release 1 reports 
+
+OpenAPI spec version: 1.0.0
+Contact: support@datacite.org
+Generated by: https://github.com/swagger-api/swagger-codegen.git
+
+=end
+
+
+class Report < ApplicationRecord
+  validates_presence_of :report_name
+  validates_presence_of :report_id
+  validates_presence_of :release
+  validates_presence_of :created_by
+  validates_presence_of :report_datasets
+
+  serialize :exceptions, Array
+end
