# db/schema.rb
@@ -12,4 +12,61 @@
 
 ActiveRecord::Schema.define(version: 0) do
 
+  create_table "error_models", id: false, force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8mb4" do |t|
+    t.integer "code"
+    t.string "severity"
+    t.string "message"
+    t.string "help_url"
+    t.string "cata"
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+  end
+
+  create_table "publishers", id: false, force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8mb4" do |t|
+    t.string "publisher_name"
+    t.string "publisher_id"
+    t.string "path"
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+  end
+
+  create_table "report_types", id: false, force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8mb4" do |t|
+    t.string "report_id"
+    t.string "release"
+    t.string "report_description"
+    t.string "path"
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+  end
+
+  create_table "reports", id: false, force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8mb4" do |t|
+    t.string "id"
+    t.string "report_name"
+    t.string "report_id"
+    t.string "release"
+    t.string "created"
+    t.string "created_by"
+    t.string "report_datasets"
+    t.string "exceptions"
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+  end
+
+  create_table "status_alerts", id: false, force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8mb4" do |t|
+    t.string "date_time"
+    t.string "alert"
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+  end
+
+  create_table "statuses", id: false, force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8mb4" do |t|
+    t.string "description"
+    t.boolean "service_active"
+    t.string "registry_url"
+    t.string "note"
+    t.string "alerts"
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+  end
+
 end
